# three-six-five-project-2022

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
