[tool.poetry]
name = "three-six-five-project-2022"
version = "0.1.0"
description = "Data Science project organized by 365 Data Science in November 2022"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "three_six_five_project_2022"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
numpy = "^1.23.4"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
scikit-learn = "^1.1.3"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.990"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | venv
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
